--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,2 +1,9 @@
 <h1> electron/angular2 issues tracking app </h1>
 
+<div *ngFor="let project of projectArray">
+    <button id="btn-project" (click)="selectProject(project.id)">{{ project.name }}</button>
+</div>
+
+<div *ngFor="let issue of issueArray">
+    {{ issue.state }}
+</div>
