--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,11 +1,32 @@
 <h1> electron/angular2 issues tracking app </h1>
 
-<button id="refresh-ui" (click)="refresh()"> Refresh </button>
+<div *ngIf="isError == true">
+    <kendo-dialog title="Error" *ngIf="opened" (close)="close('close')">
+            <p style="margin: 30px; text-align: center;">Error ({{errNumber}})</p>
+            <kendo-dialog-actions>
+                <button kendoButton (click)="close('close')">Close</button>
+            </kendo-dialog-actions>
+        </kendo-dialog>
+</div>
+
+<div class="example-wrapper">
+    <p>Groups:</p>
+    <kendo-combobox [data]="comboBoxGroup"
+                    (valueChange)="valueChange($event)"
+                    >
+    </kendo-combobox>
+</div>
+
+<button id="refresh-ui" (click)="refresh()"> Search </button>
 
 <kendo-grid [data]="gridView"
             [sortable]="{ mode: 'multiple' }"
             [sort]="sort"
-            (sortChange)="sortChange($event)">
+            (sortChange)="sortChange($event)"
+            [pageSize]="pageSize"
+            [skip]="skip"
+            [pageable]="true"
+            (pageChange)="pageChange($event)">
 
     <kendo-grid-column field="id" title="Project ID">
     </kendo-grid-column>
