--- a/app/app.component.css
+++ b/app/app.component.css
@@ -2,11 +2,44 @@
     font-family: 'Roboto', sans-serif;
 }
 
-#grid-detail {
-    display: inline-block;
-    margin-left: 5em;
+#app-title{
+    padding-top: 0.8em;
+    height: 2.5em;
+    text-align: center;
+    border-bottom: thin solid #e5e5e5;
 }
 
-#toolbar {
+h1 {
+    margin-bottom: 0;
+}
+
+#grid-detail {
     display: inline-block;
+    margin-left: 2.5em;
+}
+
+#app-toolbar {
+    background-color: #f5f5f5;
+    height: 7em;
+    padding-top: 2em;
+    border-bottom: thin solid #e5e5e5;
+}
+
+.app-, .app-route {
+    display: inline-block;
+    margin-left: 2.5em;
+}
+
+.app-route {
+    float: right;
+    margin-right: 2.5em;
+    margin-top: 1.5em;
+}
+
+.btn- {
+    width: 5em;
+}
+
+.text- {
+    margin-bottom: 0.2em;
 }
