--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,3 @@
-<h1> electron/angular2 issues tracking app </h1>
-
 <div id="busy" [ngBusy]="{busy: busy,
                           message: 'Fetching data, please wait...',
                           backdrop: true,
@@ -14,18 +12,38 @@
     </kendo-dialog-actions>
 </kendo-dialog>
 
-<div id="toolbar">
-        Groups:
+<div id="app-header">
+    <h1 id="app-title"> Time Tracking </h1>
+</div>
+
+<div id="app-toolbar">
+    <div class="app-" id="app-groups">
+        <p class="text-"> Groups: </p>
         <kendo-dropdownlist [data]="dropDownGroup" (valueChange)="valueChange($event)">
         </kendo-dropdownlist>
+    </div>
 
-        Date Start:
+    <div class="app-" id="app-date-start">
+        <p class="text-">Date Start: </p>
         <kendo-datepicker [value]="startDate" (valueChange)="onChangeStart($event)"></kendo-datepicker>
-        Date End:
-        <kendo-datepicker [value]="endDate" (valueChange)="onChangeEnd($event)"></kendo-datepicker>
+    </div>
 
-        <button kendoButton [disabled]="!isCheckIfQueue()" (click)="checkAndStart()"> Fetch </button>
+    <div class="app-" id="app-date-end">
+        <p class="text-"> Date End: </p>
+        <kendo-datepicker [value]="endDate" (valueChange)="onChangeEnd($event)"></kendo-datepicker>
+    </div>
+
+    <div class="app- btn-" id="app-button-fetch">
+        <button kendoButton [disabled]="!isCheckIfQueue()" (click)="checkAndStart()" [primary]="true"> Fetch </button>
+    </div>
+
+    <div class="app-route">
+        <button class ="btn-" id="app-button-table" kendoButton [primary]="true"> Table </button>
+        <button class ="btn-" id="app-button-graphs" kendoButton> Graphs </button>
+    </div>
+
 </div>
+<br>
 
 <kendo-grid [data]="gridData" [pageSize]="state.take" [skip]="state.skip" [sort]="state.sort" [sortable]="true" [pageable]="true"
     (dataStateChange)="dataStateChange($event)" [filterable]="true">
@@ -34,14 +52,11 @@
         <ng-template kendoGridFilterCellTemplate>
         </ng-template>
     </kendo-grid-column>
-    <kendo-grid-column field="name" title="Project Name" >
+    <kendo-grid-column field="name" title="Project Name">
         <ng-template kendoGridFilterCellTemplate let-filter let-column="column">
-         <kendo-grid-string-filter-cell
-           [showOperators]="false"
-           [column]="column"
-           [filter]="filter">
-         </kendo-grid-string-filter-cell>
-       </ng-template>
+            <kendo-grid-string-filter-cell [showOperators]="false" [column]="column" [filter]="filter">
+            </kendo-grid-string-filter-cell>
+        </ng-template>
     </kendo-grid-column>
     <kendo-grid-column field="nActive" title="Opened Issue">
         <ng-template kendoGridFilterCellTemplate>
@@ -77,7 +92,7 @@
             <table>
                 <tr>
                     <td>
-                        <p id="grid-detail" style="margin-left: 1em"><strong>Name:</strong><a href= {{item.html_link}}  target="_blank"> {{item.title}}</a></p>
+                        <p id="grid-detail" style="margin-left: 1em"><strong>Name:</strong><a href= {{item.html_link}} (click)="newWindow(item.html_link)" target="_blank"> {{item.title}}</a></p>
                     </td>
                     <td>
                         <p id="grid-detail"><strong>State:</strong> {{item.state}}</p>
