--- a/app/app.component.html
+++ b/app/app.component.html
@@ -93,7 +93,7 @@
                 <table>
                     <tr>
                         <td>
-                            <p id="grid-detail" style="margin-left: 1em"><strong>Name:</strong><a href={ {item.html_link}} (click)="newWindow(item.html_link)" target="_blank"> {{item.title}}</a></p>
+                            <p id="grid-detail" style="margin-left: 1em"><strong>Name:</strong><a href="item.html_link" (click)="newWindow(item.html_link)" target="_blank"> {{item.title}}</a></p>
                         </td>
                         <td>
                             <p id="grid-detail"><strong>State:</strong> {{item.state}}</p>
