--- a/app/app.component.html
+++ b/app/app.component.html
@@ -116,6 +116,9 @@
 
 <div class="body-graph" *ngIf="!toggle">
     <kendo-chart>
+        <ng-template kendoGridToolbarTemplate>
+                <button kendoGridPDFCommand><span class='k-icon k-i-file-pdf'></span>Export to PDF</button>
+            </ng-template>
         <kendo-chart-category-axis>
             <kendo-chart-category-axis-item-labels rotation="35">
             </kendo-chart-category-axis-item-labels>
